--- a/components/basket.html
+++ b/components/basket.html
@@ -674,9 +674,9 @@
             </div>
         </footer>
 
-        <script src="/js/basket.js"></script>
-        <script src="/js/burger.js"></script>
+        <script src="../js/basket.js"></script>
+        <script src="../js/burger.js"></script>
 
-        <script src="/js/basket-delete.js"></script>
+        <script src="../js/basket-delete.js"></script>
     </body>
 </html>
