--- a/components/catalog.html
+++ b/components/catalog.html
@@ -1770,11 +1770,11 @@
             </div>
         </footer>
 
-        <script src="/js/basket.js"></script>
-        <script src="/js/burger.js"></script>
+        <script src="../js/basket.js"></script>
+        <script src="../js/burger.js"></script>
 
-        <script src="/js/slider-hero.js"></script>
+        <script src="../js/slider-hero.js"></script>
 
-        <script src="/js/burger.js"></script>
+        <script src="../js/burger.js"></script>
     </body>
 </html>
