--- a/components/contract.html
+++ b/components/contract.html
@@ -597,10 +597,10 @@
             </div>
         </footer>
 
-        <script src="/js/basket.js"></script>
-        <script src="/js/burger.js"></script>
-        <script src="/js/counters.js"></script>
+        <script src="../js/basket.js"></script>
+        <script src="../js/burger.js"></script>
+        <script src="../js/counters.js"></script>
 
-        <script src="/js/chek-list.js"></script>
+        <script src="../js/chek-list.js"></script>
     </body>
 </html>
