--- a/components/item-not.html
+++ b/components/item-not.html
@@ -860,13 +860,13 @@
                 <div class="footer__baner"></div>
             </div>
         </footer>
-        <script src="/js/heart.js"></script>
-        <script src="/js/coffe.js"></script>
+        <script src="../js/heart.js"></script>
+        <script src="../js/coffe.js"></script>
  
-        <script src="/js/basket.js"></script>
-        <script src="/js/burger.js"></script>
-        <script src="/js/counters.js"></script>
-        <script src="/js/slider-hero.js"></script>
-        <script src="/js/change-button.js"></script>
+        <script src="../js/basket.js"></script>
+        <script src="../js/burger.js"></script>
+        <script src="../js/counters.js"></script>
+        <script src="../js/slider-hero.js"></script>
+        <script src="../js/change-button.js"></script>
     </body>
 </html>
