--- a/components/cart-item.html
+++ b/components/cart-item.html
@@ -795,12 +795,12 @@
             </div>
         </footer>
 
-        <script src="/js/basket.js"></script>
-        <script src="/js/burger.js"></script>
-        <script src="/js/heart.js"></script>
-        <script src="/js/slider-hero.js"></script>
+        <script src="../js/basket.js"></script>
+        <script src="../js/burger.js"></script>
+        <script src="../js/heart.js"></script>
+        <script src="../js/slider-hero.js"></script>
 
-        <script src="/js/burger.js"></script>
-        <script src="/js/change-button.js"></script>
+        <script src="../js/burger.js"></script>
+        <script src="../js/change-button.js"></script>
     </body>
 </html>
