--- a/components/chek-list.htm
+++ b/components/chek-list.htm
@@ -636,9 +636,9 @@
                 <div class="footer__baner"></div>
             </div>
         </footer>
-        <script src="/js/basket.js"></script>
-        <script src="/js/burger.js"></script>
-        <script src="/js/counters.js"></script>
-        <script src="/js/chek-list.js"></script>
+        <script src="../js/basket.js"></script>
+        <script src="../js/burger.js"></script>
+        <script src="../js/counters.js"></script>
+        <script src="../js/chek-list.js"></script>
     </body>
 </html>
