--- a/components/contacts.html
+++ b/components/contacts.html
@@ -609,10 +609,10 @@
             </div>
         </footer>
 
-        <script src="/js/basket.js"></script>
-        <script src="/js/burger.js"></script>
+        <script src="../js/basket.js"></script>
+        <script src="../js/burger.js"></script>
         <!-- <script src="/js/counters.js"></script> -->
 
-        <script src="/js/basket-delete.js"></script>
+        <script src="../js/basket-delete.js"></script>
     </body>
 </html>
