--- a/components/basket.html
+++ b/components/basket.html
@@ -238,12 +238,12 @@
                             <h2 class="basket-total__name">53087,10 грн</h2>
                         </div>
                         <div class="basket-total__button">
-                            <button class="basket-total__button" type="submit">
+                            <a class="basket-total__button" href="../components/chek-list.htm">
                                 Оформити замовлення
-                            </button>
-                            <button class="basket-total__button" type="submit">
+                            </a>
+                            <a class="basket-total__button" href="../components/catalog.html">
                                 Продовжити покупки
-                            </button>
+                            </a>
                         </div>
                     </div>
                     <div>
