--- a/components/category.html
+++ b/components/category.html
@@ -1692,6 +1692,6 @@
         <script src="../js/slider-hero.js"></script>
         <script src="../js/burger.js"></script>
         <script src="../js/change-button.js"></script>
-        <script src="../js/reset.js"></script>
+        <!-- <script src="../js/reset.js"></script> -->
     </body>
 </html>
