--- a/css/basket.css
+++ b/css/basket.css
@@ -60,7 +60,7 @@
         padding-bottom: 10px;
     }
 
-    .basket-total__button button {
+    .basket-total__button a {
         font-size: 9px;
         font-family: "Montserrat";
         color: var(--title-text-color);
@@ -232,7 +232,7 @@
         padding-bottom: 10px;
     }
 
-    .basket-total__button button {
+    .basket-total__button a {
         font-size: 15px;
         font-family: "Montserrat";
         color: var(--title-text-color);
@@ -419,7 +419,7 @@
         padding-bottom: 19px;
     }
 
-    .basket-total__button button {
+    .basket-total__button a {
         font-size: 20px;
         font-family: "Montserrat";
         color: var(--title-text-color);
