--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ li {
     .menu {
         font-family: "Mulish", sans-serif;
 
-        font-size: 12.5px;
+        font-size: 10px;
         text-transform: uppercase;
         margin-bottom: 30px;
         margin-top: 30px;
@@ -79,6 +79,7 @@ li {
         display: inline;
     }
     .menu-item a {
+        font-size: 12.5px;
         display: inline;
         color: var(--orange);
     }
@@ -111,6 +112,7 @@ li {
         display: inline;
     }
     .menu-item a {
+        font-size: 20px;
         display: inline;
         color: var(--orange);
     }
@@ -145,6 +147,7 @@ li {
         display: inline;
     }
     .menu-item a {
+        font-size: 14px;
         display: inline;
         color: var(--orange);
     }
@@ -208,6 +211,41 @@ button {
     border: none;
     padding: 0;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.image.first {
+    opacity: 0;
+    display: block;
+    position: absolute;
+    overflow: hidden;
+    left: -100%;
+    transition: left 0.2s;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -o-transition: 0.2s;
+    -ms-transition: 0.2s;
+}
+
+
+.ImgField:hover > .first {
+    opacity: 1;
+    left: 0;
+}
+
+.image.second {
+    opacity: 1;
+    display: block;
+
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -o-transition: 0.2s;
+    -ms-transition: 0.2s;
+}
+
+.image.second:hover {
+    opacity: 0;
 }
 
 .section {
