--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,35 @@ li {
         content: "";
         display: none;
     }
+
+    .image.first {
+        opacity: 0;
+        display: block;
+        position: absolute;
+        overflow: hidden;
+        left: -100%;
+        transition: left 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -o-transition: 0.2s;
+        -ms-transition: 0.2s;
+    }
+    
+    
+
+    
+    .image.second {
+        opacity: 1;
+        display: block;
+    
+        transition: 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -o-transition: 0.2s;
+        -ms-transition: 0.2s;
+    }
+    
+   
 }
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .container {
@@ -124,6 +153,40 @@ li {
     .menu-item:last-child:after {
         content: "";
         display: none;
+    }
+
+    .image.first {
+        opacity: 0;
+        display: block;
+        position: absolute;
+        overflow: hidden;
+        left: -100%;
+        transition: left 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -o-transition: 0.2s;
+        -ms-transition: 0.2s;
+    }
+    
+    
+    .ImgField:hover > .first {
+        opacity: 1;
+        left: 0;
+    }
+    
+    .image.second {
+        opacity: 1;
+        display: block;
+    
+        transition: 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -o-transition: 0.2s;
+        -ms-transition: 0.2s;
+    }
+    
+    .image.second:hover {
+        opacity: 0;
     }
 }
 
@@ -160,11 +223,49 @@ li {
         content: "";
         display: none;
     }
+
+    .image.first {
+        opacity: 0;
+        display: block;
+        position: absolute;
+        overflow: hidden;
+        left: -100%;
+        transition: left 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -o-transition: 0.2s;
+        -ms-transition: 0.2s;
+    }
+    
+    
+    .ImgField:hover > .first {
+        opacity: 1;
+        left: 0;
+    }
+    
+    .image.second {
+        opacity: 1;
+        display: block;
+    
+        transition: 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -o-transition: 0.2s;
+        -ms-transition: 0.2s;
+    }
+    
+    .image.second:hover {
+        opacity: 0;
+    }
+}
+
+.header__link--title{
+    position: relative;
 }
 
 .header__link--title:after {
     display: block;
-
+position: absolute;
     width: 0;
     height: 2px;
     background-color: var(--table-gray-color);
@@ -214,39 +315,7 @@ button {
 }
 
 
-.image.first {
-    opacity: 0;
-    display: block;
-    position: absolute;
-    overflow: hidden;
-    left: -100%;
-    transition: left 0.2s;
-    -webkit-transition: 0.2s;
-    -moz-transition: 0.2s;
-    -o-transition: 0.2s;
-    -ms-transition: 0.2s;
-}
 
-
-.ImgField:hover > .first {
-    opacity: 1;
-    left: 0;
-}
-
-.image.second {
-    opacity: 1;
-    display: block;
-
-    transition: 0.2s;
-    -webkit-transition: 0.2s;
-    -moz-transition: 0.2s;
-    -o-transition: 0.2s;
-    -ms-transition: 0.2s;
-}
-
-.image.second:hover {
-    opacity: 0;
-}
 
 .section {
 }
